Change Alma Linux to Deepin Linux in config

--- a/.devcontainer/alma/devcontainer.json
+++ b/.devcontainer/alma/devcontainer.json
@@ -1,8 +1,8 @@
 {
-  "name": "Alma Linux",
+  "name": "Deepin Linux",
   "service": "qemu",
   "containerEnv": {
-    "BOOT": "alma"
+    "BOOT": "https://cdimage.deepin.com/releases/25.0.1/amd64/deepin-desktop-community-25.0.1-amd64.iso"
   },
   "forwardPorts": [8006],
   "portsAttributes": {
